# Skity

./: .gitignore  CMakeLists.txt
cmake/: Platform.cmake
example/: example.cc
example/Android/: build.gradle  gradle.properties  local.properties
example/Android/app/: build.gradle
sandbox/: CMakeLists.txt  example.cc  main.cc  perf.cc  perf.hpp  widgets.cc
sandbox/gl/: gl_app.cc  gl_app.hpp
src/: logging.cc  logging.hpp
src/effect/: dash_path_effect.cc  dash_path_effect.hpp  discrete_path_effect.cc  discrete_path_effect.hpp  gradient_shader.cc  gradient_shader.hpp  mask_filter.cc  path_effect.cc  pixmap_shader.cc  pixmap_shader.hpp  shader.cc
src/geometry/: conic.cc  conic.hpp  contour_measure.cc  contour_measure.hpp  geometry.cc  geometry.hpp  math.hpp  point_priv.hpp  rect.cc  rrect.cc
src/graphic/: bitmap.cc  color.cc  paint.cc  path.cc  path_measure.cc  path_measure.hpp  path_priv.hpp
src/io/: data.cc  pixmap.cc
src/render/: canvas.cc  texture_atlas.cc  texture_atlas.hpp
src/render/hw/: hw_canvas.cc  hw_canvas.hpp  hw_canvas_state.cc  hw_canvas_state.hpp  hw_draw.cc  hw_draw.hpp  hw_font_texture.hpp  hw_geometry_raster.cc  hw_geometry_raster.hpp  hw_mesh.cc  hw_mesh.hpp  hw_path_raster.cc  hw_path_raster.hpp  hw_path_visitor.cc  hw_path_visitor.hpp  hw_render_target.cc  hw_render_target.hpp  hw_renderer.hpp  hw_texture.hpp
src/render/sw/: sw_canvas.cc  sw_canvas.hpp  sw_raster.cc  sw_raster.hpp  sw_span_brush.cc  (+2 more)
src/text/: ft_library_wrap.cc  ft_library_wrap.hpp  text_blob.cc  text_run.cc  typeface.cc  utf.cc
src/utils/: lazy.hpp
(+52 files in other folders)
